--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -17,4 +17,4 @@ thomas_camera_door_url: ''
 thomas_camera_reboot: ''
 get_hall_motion_status: ''
 get_landing_motion_status: ''
-slack_api_key: ''
+slack_api_key: 'FakeSlackKey'
