--- a/automations.yaml
+++ b/automations.yaml
@@ -1,6 +1,6 @@
 - alias: Turn on office lights on motion
   trigger:
-  - entity_id: binary_sensor.office_motion_sensor
+  - entity_id: binary_sensor.office_sensor
     platform: state
     to: 'on'
   action:
@@ -11,7 +11,7 @@
 - alias: Turn off office lights when there is no longer any motion
   trigger:
   - platform: state
-    entity_id: binary_sensor.office_motion_sensor
+    entity_id: binary_sensor.office_sensor
     for:
       minutes: 10
     to: 'off'
