--- a/floorplan.yaml
+++ b/floorplan.yaml
@@ -23,7 +23,7 @@
         - name: Motion
           entities:
             - binary_sensor.thomas_sensor
-            - binary_sensor.office_motion_sensor
+            - binary_sensor.office_sensor
           states:
             - state: 'on'
               class: 'danger-background'
