--- a/sensors.yaml
+++ b/sensors.yaml
@@ -81,4 +81,9 @@
 - platform: command_line
   name: Last Backup
   command: "cat /home/homeassistant/.homeassistant/lastbackup.txt"
-  
+
+- platform: command_line
+  name: CPU Temperature
+  command: "cat /sys/class/thermal/thermal_zone0/temp"
+  unit_of_measurement: "°C"
+  value_template: '{{ (value | multiply(0.001)) | round(1) }}'
