--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ www/custom_ui/state-card-custom-ui.html
 custom_components/customizer/__init__.py
 update.sh
 custom_components/customizer/services.yaml
+*.tmp
