--- a/groups.yaml
+++ b/groups.yaml
@@ -45,13 +45,15 @@ automation:
     - automation.low_battery_alert
     - automation.low_outside_temperature
     - automation.motion_alert
+    - automation.porch_animation_speed
+    - automation.turn_off_bed_lights
     - automation.turn_off_electric_blanket
     - automation.turn_off_office_lights_when_there_is_no_longer_any_motion
+    - automation.turn_on_bed_lights
     - automation.turn_on_dining_room_light_and_disable_alerts_when_someone_comes_home
     - automation.turn_on_electric_blanket
     - automation.turn_on_office_lights_on_motion
     - automation.update_notifications
-
 camera_thomas:
   entities:
     - camera.thomas
