--- a/groups.yaml
+++ b/groups.yaml
@@ -55,6 +55,7 @@ automation:
     - automation.turn_on_office_lights_on_motion
     - automation.update_notifications
     - automation.alert_on_bad_logon_attempts
+    - automation.startup_notification
 
 camera_thomas:
   entities:
